force-app/main/default/objects/Video__c/Video__c.object-meta.xml
<CustomObject>
    <label>Video</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Videos Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>