force-app/main/default/objects/Video__c/fields/Suites__c.field-meta.xml
<CustomField>
    <fullName>Suites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suites</label>
    <referenceTo>Suites__c</referenceTo>
    <relationshipLabel>Videos</relationshipLabel>
    <relationshipName>Videos</relationshipName>
    <type>Lookup</type>
</CustomField>