force-app/main/default/objects/Video__c/fields/Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Video_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Attachment_Id__c , Attachment_Name__c ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video Link</label>
    <type>Text</type>
</CustomField>